Add configurations